# TS3-Patch-plugin

./: CMakeLists.txt  NOTES.MD  README.md
include/: base64.h  config.h  core.h  ini_reader.h  plugin.h  unique_loader.h
include/gui/: PluginConfig.h  helper.h
include/hook/: Hook.h  HookLinux.h  HookWindows.h  hook.h
include/process/: file.h  memory.h  module.h  pattern.h  process.h
include/update/: updater.h
include/wrapper/: License.h  ParameterParser.h  general.h
package/: TS3 Patch.ts3_plugin  package.ini
src/: base64.cpp  config.cpp  core.cpp  unique_loader.cpp
src/gui/: PluginConfig.cpp
src/hook/: Hook.cpp  hook.cpp  jmp.S  linux_x64.cpp
src/hook/linux/: jmp.S  linux_x64.cpp
src/hook/win/: Hook.cpp  jmp.S
src/process/: file.cpp  memory.cpp  module.cpp  pattern.cpp  process.cpp
src/version/: updater.cpp
src/wrapper/: License.cpp  PacketParser.cpp  general.cpp
teamspeak/teamspeak/: public_definitions.h
test/: MemoryTest.cpp  jmp.S
test/linux/: MemoryTest.cpp
test/win/: Main.cpp
ui/: pluginconfig.ui
